Archive/9df7a1ababd4db1f6ae7f690146b0a0c-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp:7:1: error: static assertion failed: 
 static_assert(is_same<decltype((f)), void(*)()>(), "");
 ^
